<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroud_color"
    tools:context="com.tbz.wifibox.VipActivity">

    <include
        android:id="@+id/id_title"
        layout="@layout/layout_head" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/id_title"
        android:layout_gravity="bottom"
        android:fillViewport="true"
        android:scrollbars="none">

        <FrameLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:lineSpacingExtra="10dp"
                    android:padding="25dp"
                    android:text="@string/text_vip_information_1"
                    android:textColor="@color/content_textcolor"
                    android:textSize="@dimen/contenttext_midsize" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text1"
                    android:lineSpacingExtra="8dp"
                    android:padding="25dp"
                    android:text="@string/text_vip_information_2"
                    android:textColor="@color/content_textcolor"
                    android:textSize="@dimen/contenttext_midsize" />

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text2"
                    android:lineSpacingExtra="10dp"
                    android:padding="25dp"
                    android:text="@string/text_vip_information_3"
                    android:textColor="@color/content_textcolor"
                    android:textSize="@dimen/contenttext_midsize" />

                <TextView
                    android:id="@+id/above_line"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/text3"
                    android:layout_marginTop="10dp"
                    android:background="#7f9fb0c4" />

                <EditText
                    android:id="@+id/id_et_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/above_line"

                    android:background="#ffffff"
                    android:hint="@string/text_vip_hint"
                    android:paddingBottom="10dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="5dp"
                    android:paddingTop="10dp"
                    android:singleLine="true"
                    android:textColor="@color/content_textcolor"
                    android:textSize="@dimen/contenttext_midsize" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@+id/id_et_number"
                    android:background="#7f9fb0c4" />

            </RelativeLayout>
        </FrameLayout>
    </ScrollView>

</RelativeLayout>
