<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical">
    <!--顶栏-->
    <include
        android:id="@+id/top_layout"
        layout="@layout/layout_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"></include>

    <LinearLayout
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cd_right_tv"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/point1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/add_three_green" />

        <ImageView
            android:id="@+id/point2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/add_three_yellow" />

        <ImageView
            android:id="@+id/point3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/add_three_red" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="top|center_horizontal"
        android:orientation="vertical">


        <FrameLayout
            android:id="@+id/touch_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id = "@+id/touch_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/add_touch_back"/>
            <ImageView
                android:id="@+id/touch_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="0.5dp"
                android:clickable="false"
                android:src="@mipmap/add_touch_pic"
                />
            <ImageView
                android:id="@+id/touch_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:src="@mipmap/add_pass"/>

            <TextView
                android:id="@+id/touch_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="30dp"
                android:clickable="false"
                android:textColor="@color/content_textcolor"
                android:textSize="@dimen/contenttext_midsize"
                android:text="@string/recorder_touch_head_sound" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/shake_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id = "@+id/shake_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/add_shake_back"/>

            <ImageView
                android:id="@+id/shake_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:layout_marginTop="0.5dp"
                android:layout_marginRight="30dp"
                android:clickable="false"
                android:src="@mipmap/add_shake_pic" />
            <ImageView
                android:id="@+id/shake_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:src="@mipmap/add_pass"/>

            <TextView
                android:id="@+id/shake_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:layout_marginLeft="30dp"
                android:clickable="false"
                android:textColor="@color/content_textcolor"
                android:textSize="@dimen/contenttext_midsize"
                android:text="@string/recorder_shake_sound" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/upside_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id = "@+id/upside_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/more_diy_back"/>

            <ImageView
                android:id="@+id/upside_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:layout_marginLeft="40dp"
                android:clickable="false"
                android:layout_marginTop="0.5dp"
                android:src="@mipmap/add_upside_pic" />
            <ImageView
                android:id="@+id/upside_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_marginLeft="10dp"
                android:visibility="gone"
                android:src="@mipmap/add_pass"/>

            <TextView
                android:id="@+id/upside_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="30dp"
                android:clickable="false"
                android:textColor="@color/content_textcolor"
                android:textSize="@dimen/contenttext_midsize"
                android:text="@string/recorder_upside_sound" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>
